--- a/roles/kvm_snapshot_base/tasks/main.yml
+++ b/roles/kvm_snapshot_base/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - assert:
-    msg: "kvm_snapshot_base_os is required and must be one of: rhel7,centos7,fedora25,fedora26"
+    msg: "kvm_snapshot_base_os is required and must be one of: rhel7,centos7,fedora25,fedora26,fedora27"
     that:
-    - kvm_snapshot_base_os | default('') in ['rhel7', 'centos7', 'fedora25', 'fedora26']
+    - kvm_snapshot_base_os | default('') in ['rhel7', 'centos7', 'fedora25', 'fedora26','fedora27']
 
 - name: Check for existence of ssh key
   stat:
@@ -44,7 +44,7 @@
     command: >
       virt-install --name {{ kvm_snapshot_base_name }}
       --vcpus=1 --ram=4096
-      --os-type=linux --os-variant={{ 'rhel7' if kvm_snapshot_base_os in ['rhel7', 'centos7'] else kvm_snapshot_base_os }}
+      --os-type=linux --os-variant={{ 'rhel7' if kvm_snapshot_base_os in ['rhel7', 'centos7'] else  'fedora-unknown' if kvm_snapshot_base_os in ['fedora25', 'fedora26','fedora27'] else kvm_snapshot_base_os }}
       --controller type=scsi,model=virtio-scsi
       --location={{ kvm_snapshot_base_repos[kvm_snapshot_base_os]['netboot'] }}
       --disk path=/dev/{{ kvm_snapshot_base_vg }}/{{ kvm_snapshot_base_name }},cache=none,io=native,discard=unmap,bus=scsi
